# server/docs/swagger.yaml
@@ -24,11 +24,50 @@ definitions:
     - name
     - password
     type: object
+  request.UpdateUser:
+    properties:
+      avatar:
+        maximum: 20
+        minimum: 0
+        type: integer
+      email:
+        type: string
+      name:
+        type: string
+      user_name:
+        type: string
+    required:
+    - avatar
+    - email
+    - name
+    - user_name
+    type: object
+  response.CommonResponse:
+    properties:
+      code:
+        type: integer
+      data: {}
+      message:
+        type: string
+    type: object
   response.CommonResponseWithoutData:
     properties:
       code:
         type: integer
       message:
+        type: string
+    type: object
+  response.User:
+    properties:
+      avatar:
+        type: integer
+      email:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      user_name:
         type: string
     type: object
 info:
@@ -49,6 +88,26 @@ paths:
       summary: hello example
       tags:
       - example
+  /user/info:
+    get:
+      consumes:
+      - application/json
+      description: user info
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功响应
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.CommonResponse'
+            - properties:
+                Data:
+                  $ref: '#/definitions/response.User'
+              type: object
+      summary: user info
+      tags:
+      - User
   /user/login:
     post:
       consumes:
@@ -75,7 +134,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: do hello
+      description: user register
       parameters:
       - description: UserRegister
         in: body
@@ -91,6 +150,28 @@ paths:
           schema:
             $ref: '#/definitions/response.CommonResponseWithoutData'
       summary: user register
+      tags:
+      - User
+  /user/update:
+    post:
+      consumes:
+      - application/json
+      description: user update1
+      parameters:
+      - description: UserUpdate
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功响应
+          schema:
+            $ref: '#/definitions/response.CommonResponseWithoutData'
+      summary: user update
       tags:
       - User
 swagger: "2.0"
